# skill-extractor

./: .gitignore  CHANGELOG.md  README.md
artifacts/: meta.json  mlp.json  skills.json
fixtures/: e2e_texts.json  extraction_fixtures.json  generate.py  matcher_fixtures.json
js/: README.md  package.json
js/data/: skills.json
js/src/: index.js  matcher.js  mlp.js
js/test/: matcher.test.js  parity.test.js
python/: README.md  pyproject.toml
python/skill_extractor/: __init__.py  embedder.py  extractor.py  matcher.py  mlp.py
python/tests/: test_parity.py
ruby/: LICENSE  README.md  skill-extractor.gemspec
ruby/lib/: skill_extractor.rb
ruby/lib/skill_extractor/: matcher.rb  mlp.rb  version.rb
ruby/test/: parity_test.rb
rust/: Cargo.toml  README.md  build.rs
rust/src/: embedder.rs  lib.rs  matcher.rs  mlp.rs
rust/tests/: parity.rs
