[package]
name = "skill-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract skills from job postings and resumes — 32K-skill gazetteer + MiniLM embeddings + MLP context classifier (73% F1, trained on 491K samples)."
license = "MIT"
repository = "https://github.com/dreamjobs-tech/skill-extractor"
homepage = "https://github.com/dreamjobs-tech/skill-extractor"
keywords = ["skill-extraction", "ner", "nlp", "job-postings", "resume"]
categories = ["text-processing"]
exclude = ["target"]

[dependencies]
base64 = "0.22"
hf-hub = "0.4"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.23"
